--- a/package.json
+++ b/package.json
@@ -8,11 +8,16 @@
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.7",
         "@tailwindcss/typography": "^0.5.10",
+        "alpinejs": "^3.0.6",
         "autoprefixer": "^10.4.16",
         "axios": "^1.6.4",
         "laravel-vite-plugin": "^1.0",
+        "moment-timezone": "^0.5.40",
         "postcss": "^8.4.32",
         "tailwindcss": "^3.4.0",
         "vite": "^5.0"
+    },
+    "dependencies": {
+        "md.bootstrappersiandatetimepicker": "^4.2.6"
     }
 }
